Fix scrollable docs navigation on mobile
The max-height caused the docs navigation element to be scrollable when
the mobile viewport was not big enough to show on the entire screen.
Remove the max height to always show the full docs navigation without
scrolling within the navigation element.

--- a/frontend/styles/docs.scss
+++ b/frontend/styles/docs.scss
@@ -74,9 +74,11 @@
   }
 
   .docs-navigation {
+    position: relative;
     margin-top: var(--spacing-small);
     padding-top: var(--spacing-small);
     width: 100%;
+    max-height: unset;
     border-top: 1px solid var(--highlight-color);
   }
 
